# observable

./: .dockerignore  .env.local.example  .gitattributes  .gitignore  .gitleaksignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.seed  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  Spec.txt  VERSIONING.md  dashboard-border-resize-diff.txt  docker-compose.demos.yml  docker-compose.yml  package-lock.json  package.json  pr_body.md  renovate.json  skills-lock.json
collectable/builder/build-service/: Cargo.toml  Dockerfile
collectable/builder/build-service/src/: api.rs  codegen.rs  compiler.rs  definition.rs  main.rs  packaging.rs  parse.rs  validate.rs
collectable/mediator/: Cargo.toml
collectable/mediator/src/: config.rs  lib.rs  signals.rs
collectable/mediator/src/otlp/: mod.rs
collectable/mediator/src/parser/: mod.rs
collectable/mediator/src/transport/: mod.rs
collectable/mediator/templates/: Cargo.toml.tmpl  Dockerfile.tmpl  docker-compose-snippet.yml.tmpl  initd.sh.tmpl  main.rs.tmpl  systemd.service.tmpl
libs/domain/: Cargo.toml
libs/domain/src/: config.rs  envelope.rs  generated.rs  lib.rs  log.rs  metric.rs  nlq.rs  span.rs  telemetry.rs  visualization.rs
libs/observable-auth/: Cargo.toml
libs/observable-auth/src/: lib.rs
libs/test-support/: Cargo.toml
libs/test-support/src/: clickhouse.rs  postgres.rs
libs/test-support/tests/: clickhouse_shared_client.rs  postgres_shared_pool.rs
services/admin-service/: Cargo.toml
services/admin-service/.sqlx/: query-2fdb1630318318a65ef6062c6fbaf62a39e0fb8f42a4b7c07ede8f31e8696b03.json  query-31abc410513b0435bd69ae51d5d204c018d6c7688a277312d1d99c212c473dd3.json  query-38df134117f4912957bd5e7be5ce14edeb71808a0ec6d13ad4cdfd6f2d723e7b.json  query-74cd1f0a67781a6b1bbad02a6e8530779099ca76db06f016abc88f0230b01722.json  query-fb796667b1bafb7410f2386b94fc86f965a1647e37e9f13b3c15156721cd17e7.json
services/admin-service/src/: admin_members.rs  alerts.rs  config.rs  lib.rs  llm_probe.rs  main.rs  observability.rs  tokens.rs  usage.rs
services/admin-service/src/middleware/: auth.rs
services/admin-service/tests/: admin_members_integration.rs  admin_roles_integration.rs  auth_tenant_isolation_integration.rs  postgres_config_integration.rs  postgres_tokens_integration.rs  usage_integration.rs
services/alert-evaluator/: Cargo.toml
services/alert-evaluator/src/: evaluator.rs  lib.rs  main.rs  observability.rs  readyz.rs
services/alert-evaluator/tests/: change_detection_integration.rs  deadman_integration.rs  http_api_integration.rs  incident_integration.rs  lifecycle_integration.rs  slo_burn_rate_integration.rs
services/auth-service/: Cargo.toml
services/auth-service/src/: audit.rs  dev_bootstrap.rs  lib.rs  main.rs  observability.rs  oidc.rs  session.rs  validate.rs
services/auth-service/tests/: http_api_integration.rs  oidc_callback_integration.rs  oidc_http.rs  postgres_integration.rs  session_integration.rs
services/ingest-gateway/: Cargo.toml
services/ingest-gateway/src/: auth.rs  cardinality.rs  change_events.rs  deployment_registry.rs  deployments.rs  lib.rs  main.rs  observability.rs  readyz.rs
services/ingest-gateway/src/grpc/: convert.rs  log.rs  metric.rs  mod.rs  trace.rs
services/ingest-gateway/src/http-json/: convert.rs  logs.rs  metrics.rs  mod.rs  traces.rs
services/ingest-gateway/src/prometheus_rw/: convert.rs  mod.rs  proto.rs
services/ingest-gateway/src/queue/: producer.rs
services/ingest-gateway/src/routes/: logs.rs  metrics.rs  traces.rs
services/ingest-gateway/tests/: deployment_registry_integration.rs  http_readyz_integration.rs
services/query-api/: Cargo.toml
services/query-api/.sqlx/: query-53cf8a0cc96ddacda92846777d8964b201345d7e2387b3ced63fd41ce2c7104c.json  query-9fd5b3beec0eee1e14f80d8236f2cea20bb559cd49e7fe101965d4f6292d07f3.json  query-afeeee77b9ed98299ae57636cad20ae92ff1f4f7ebcff36566a736dda3398698.json  query-c5ab950742f8c47a369c132afef1003a4012adf088c730226271f7c35296eb99.json
services/query-api/src/: admin_members.rs  alerts.rs  audit.rs  change_events.rs  config.rs  dashboards.rs  deployments.rs  discovery.rs  incidents.rs  lib.rs  llm_adapter.rs  llm_config.rs  logs.rs  main.rs  mcp_query.rs  mcp_tools.rs  metrics.rs  nlq_session.rs  notifications.rs  observability.rs  reliability.rs  saved_views.rs  schemas.rs  setup.rs  slos.rs  sql_templates.rs  tenants.rs  tokens.rs  traces.rs  usage.rs
services/query-api/src/middleware/: auth.rs
services/query-api/src/planner/: mod.rs
services/query-api/tests/: api_key_audit_integration.rs  clickhouse_fetch_label_keys_integration.rs  clickhouse_integration.rs  clickhouse_mcp_query_integration.rs  http_api_integration.rs  nlq_shorthand_integration.rs  nlq_sql_safety_integration.rs  postgres_alerts_integration.rs  postgres_change_events_integration.rs  postgres_config_integration.rs  postgres_dashboard_rebac_integration.rs  postgres_dashboards_integration.rs  postgres_mcp_tools_integration.rs  postgres_schemas_integration.rs  postgres_slos_integration.rs  postgres_tenants_integration.rs  postgres_tokens_integration.rs  session_auth_integration.rs
services/query-api/tests/it/: api_key_audit_integration.rs  clickhouse_fetch_label_keys_integration.rs  main.rs  (+14 more)
services/storage-writer/: Cargo.toml
services/storage-writer/src/: buffer.rs  lib.rs  logs.rs  main.rs  metrics.rs  observability.rs  retention.rs  spans.rs
services/storage-writer/tests/: http_api_integration.rs
services/stream-processor/: Cargo.toml
services/stream-processor/src/: batch.rs  consumer.rs  lib.rs  main.rs  metrics.rs  normalise.rs  observability.rs  readyz.rs
services/stream-processor/tests/: batch_handler_integration.rs  http_readyz_integration.rs  redpanda_integration.rs
testbench/api/: Dockerfile  main.py  pyproject.toml  requirements.txt
testbench/loadgen/: Dockerfile  loadgen.py  pyproject.toml  requirements.txt
testbench/worker/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  worker.py
(+846 files in other folders)
