[workspace]
resolver = "2"
members = ["."]

[package]
name = "collectable-mediator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.8", features = ["json"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config       = "0.15"
signal-hook  = "0.4"
syslog_loose = "0.23"
grok         = "2"
regex        = "1"
csv          = "1"
rumqttc      = "0.25"
rdkafka      = { version = "0.39", features = ["tokio", "cmake-build"] }
opentelemetry        = { version = "0.32", features = ["logs"] }
opentelemetry_sdk    = { version = "0.32", features = ["logs"] }
opentelemetry-otlp   = { version = "0.32", features = ["http-proto", "logs", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.32"
tonic        = "0.14"
chrono       = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
