[package]
name    = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry        = { workspace = true }
opentelemetry_sdk    = { workspace = true }
opentelemetry-otlp   = { workspace = true }
tracing-opentelemetry = { workspace = true }
clickhouse         = { workspace = true, optional = true }

[features]
storage = ["clickhouse"]
