[package]
name    = "domain"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry        = { workspace = true }
opentelemetry_sdk    = { workspace = true }
opentelemetry-otlp   = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tonic              = { workspace = true }
reqwest              = { workspace = true }
tower-http         = { workspace = true }
axum               = { workspace = true }
clickhouse         = { workspace = true, optional = true }

[features]
storage = ["clickhouse"]
