[package]
name    = "observable-auth"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum               = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }
wiremock   = "0.6"
