[package]
name    = "admin-service"
version = "0.1.0"
edition.workspace = true

[lib]
name = "admin_service"
path = "src/lib.rs"

[dependencies]
domain             = { path = "../../libs/domain", features = ["storage"] }
observable-auth    = { path = "../../libs/observable-auth" }
chrono             = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
clickhouse         = { workspace = true }
reqwest            = { workspace = true }
async-openai       = { version = "0.41", features = ["chat-completion", "model"] }
prometheus         = { version = "0.14.0", features = ["process"] }
rand               = "0.10"
sha2               = "0.11"

[dev-dependencies]
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres", "clickhouse"] }
tokio                  = { version = "1", features = ["full"] }
uuid                   = { version = "1", features = ["v4"] }
tower                  = { version = "0.5", features = ["util"] }
http-body-util         = "0.1"
