[package]
name    = "alert-evaluator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alert-evaluator"
path = "src/main.rs"

[dependencies]
domain             = { path = "../../libs/domain" }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
clickhouse         = { workspace = true }
reqwest            = { workspace = true }
chrono             = { workspace = true }

[dev-dependencies]
domain                  = { path = "../../libs/domain", features = ["storage"] }
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["clickhouse", "postgres"] }
