[package]
name    = "auth-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
domain             = { path = "../../libs/domain" }
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
sha2               = "0.10"

[dev-dependencies]
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio                  = { version = "1", features = ["full"] }
uuid                   = { version = "1", features = ["v4"] }
