[package]
name    = "auth-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
domain             = { path = "../../libs/domain" }
opentelemetry      = { workspace = true }
tracing-opentelemetry = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
sha2               = "0.10"
jsonwebtoken       = "10"
rand               = "0.8"
base64             = "0.22"
reqwest            = { workspace = true }

[dev-dependencies]
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio                  = { version = "1", features = ["full"] }
uuid                   = { version = "1", features = ["v4"] }
