[package]
name    = "auth-service"
version = "0.1.0"
edition.workspace = true

[lib]
name = "auth_service"
path = "src/lib.rs"

[dependencies]
domain             = { path = "../../libs/domain" }
opentelemetry      = { workspace = true }
tracing-opentelemetry = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
sha2               = "0.11"
jsonwebtoken       = { version = "10", features = ["rust_crypto"] }
rand               = "0.10"
base64             = "0.22"
reqwest            = { workspace = true }
prometheus         = { version = "0.14.0", features = ["process"] }

[dev-dependencies]
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio                  = { version = "1", features = ["full"] }
uuid                   = { version = "1", features = ["v4"] }
tower                  = { version = "0.5", features = ["util"] }
http-body-util         = "0.1"
