[package]
name    = "ingest-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingest-gateway"
path = "src/main.rs"

[dependencies]
domain             = { path = "../../libs/domain" }
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
bytes              = { workspace = true }
flate2             = "1"
prost              = { workspace = true }
tonic              = { workspace = true }
opentelemetry-proto = { version = "0.7", features = ["gen-tonic", "trace", "logs", "metrics"] }
rdkafka            = { workspace = true }
config             = { workspace = true }
reqwest            = { version = "0.12", features = ["json"] }
governor           = { workspace = true }
hex                = "0.4"

[dev-dependencies]
axum-test    = "14"
tokio-stream = { version = "0.1", features = ["net"] }
