[package]
name    = "ingest-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name    = "ingest_gateway"
path    = "src/lib.rs"

[[bin]]
name = "ingest-gateway"
path = "src/main.rs"

[dependencies]
domain             = { path = "../../libs/domain" }
opentelemetry      = { workspace = true }
tracing-opentelemetry = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
bytes              = { workspace = true }
flate2             = "1"
prost              = { workspace = true }
tonic              = { workspace = true }
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "logs", "metrics"] }
rdkafka            = { workspace = true }
config             = { workspace = true }
reqwest            = { workspace = true }
governor           = { workspace = true }
hex                = "0.4"

[dev-dependencies]
axum-test              = "14"
tokio-stream           = { version = "0.1", features = ["net"] }
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
