[package]
name    = "query-api"
version = "0.1.0"
edition.workspace = true

[lib]
name = "query_api"
path = "src/lib.rs"

[dependencies]
domain             = { path = "../../libs/domain", features = ["storage"] }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
reqwest            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clickhouse         = { workspace = true }
sqlx               = { workspace = true }
async-openai       = { version = "0.36", features = ["chat-completion", "model"] }
async-trait        = "0.1"
rand               = "0.9"
sha2               = "0.10"

[dev-dependencies]
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["clickhouse", "postgres"] }
tokio                  = { version = "1", features = ["full"] }
uuid                   = { version = "1", features = ["v4"] }
chrono                 = { workspace = true }
tower                  = { version = "0.4", features = ["util"] }
http-body-util         = "0.1"
serde_json             = { workspace = true }
wiremock               = "0.6"
