[package]
name    = "storage-writer"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain             = { path = "../../libs/domain", features = ["storage"] }
opentelemetry      = { workspace = true }
tracing-opentelemetry = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clickhouse         = { workspace = true }

[dev-dependencies]
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["clickhouse"] }
tokio                  = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid                   = { workspace = true }
