[package]
name    = "stream-processor"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain             = { path = "../../libs/domain" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rdkafka            = { workspace = true }
reqwest            = { workspace = true }

[dev-dependencies]
testcontainers = "0.27.3"
