[project]
name = "testbench-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "asyncpg==0.31.0",
    "aio-pika==9.6.2",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.62b1",
    "opentelemetry-instrumentation-asyncpg==0.62b1",
    "opentelemetry-instrumentation-aio-pika==0.62b1",
    "opentelemetry-instrumentation-logging==0.62b1",
]

[tool.uv]
package = false
