[project]
name = "testbench-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "asyncpg==0.31.0",
    "aio-pika==9.6.2",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.43.0",
    "opentelemetry-instrumentation-fastapi==0.63b1",
    "opentelemetry-instrumentation-asyncpg==0.63b1",
    "opentelemetry-instrumentation-aio-pika==0.63b1",
    "opentelemetry-instrumentation-logging==0.63b1",
]

[tool.uv]
package = false
