[project]
name = "testbench-loadgen"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx==0.28.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.1",
    "opentelemetry-instrumentation-logging==0.62b1",
    "opentelemetry-instrumentation-httpx==0.62b1",
]

[tool.uv]
package = false
