[project]
name = "testbench-loadgen"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx==0.28.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.42.1",
    "opentelemetry-instrumentation-logging==0.63b1",
    "opentelemetry-instrumentation-httpx==0.63b1",
]

[tool.uv]
package = false
