[project]
name = "testbench-loadgen"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx==0.28.1",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.43.0",
    "opentelemetry-instrumentation-logging==0.64b0",
    "opentelemetry-instrumentation-httpx==0.64b0",
]

[tool.uv]
package = false
