[package]
name = "collectable-build-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build-service"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = { version = "0.7", features = ["json", "multipart"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tera       = "1"
zip        = "2"
uuid       = { version = "1", features = ["v4"] }
